@@ -120,7 +120,20 @@
         <long></long>
       </locale>
       </schema>
-      
+  
+      <schema>
+      <key>/schemas/apps/procman/show_all_fs</key>
+      <applyto>/apps/procman/show_all_fs</applyto>
+      <owner>procman</owner>
+      <type>bool</type>
+      <default>False</default>
+      <locale name="C">
+        <short>Whether information about all filesystems should be displayed</short>
+        <long>Whether information about all filesystems should be displayed:  this will include filesystem types like 'autofs' and 'procfs'. It can be usefull to get a list of all currently mounted filesystems.</long>
+      </locale>
+      </schema>
+
+    
       <schema>
       <key>/schemas/apps/procman/disks_interval</key>
       <applyto>/apps/procman/disks_interval</applyto>
