@@ -317,6 +317,21 @@ show_kill_dialog_toggled (GtkToggleButton *button, gpointer data)
 		
 }
 
+
+static void
+show_all_fs_toggled (GtkToggleButton *button, gpointer data)
+{
+	ProcData *procdata = data;
+	GConfClient *client = procdata->client;
+
+	gboolean toggled;
+
+	toggled = gtk_toggle_button_get_active (button);
+
+	gconf_client_set_bool (client, "/apps/procman/show_all_fs", toggled, NULL);
+}
+
+
 static void
 show_hide_dialog_toggled (GtkToggleButton *button, gpointer data)
 {
@@ -760,6 +775,16 @@ procdialog_create_preferences_dialog (ProcData *procdata)
 	label = gtk_label_new_with_mnemonic (_("seconds"));
 	gtk_misc_set_alignment (GTK_MISC (label), 0.0, 0.5);
 	gtk_box_pack_start (GTK_BOX (hbox3), label, FALSE, FALSE, 0);
+
+
+	hbox2 = gtk_hbox_new (FALSE, 6);
+	gtk_box_pack_start (GTK_BOX (vbox2), hbox2, FALSE, FALSE, 0);
+	check_button = gtk_check_button_new_with_mnemonic (_("Show _all filesystems"));
+	gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (check_button),
+				      procdata->config.show_all_fs);
+	g_signal_connect (G_OBJECT (check_button), "toggled",
+			    G_CALLBACK (show_all_fs_toggled), procdata);
+	gtk_box_pack_start (GTK_BOX (hbox2), check_button, FALSE, FALSE, 0);
 
 
 
