@@ -1,5 +1,14 @@
 2005-04-30  Benoît Dejean  <TazForEver@dlfp.org>
 
+	* src/callbacks.c: (fsusage_stats), (cb_update_disks):
+	* src/gnome-system-monitor.schemas.in:
+	* src/procdialogs.c: (show_all_fs_toggled),
+	(procdialog_create_preferences_dialog):
+	* src/procman.c: (show_all_fs_changed_cb), (procman_data_new):
+	* src/procman.h: New option to show all devices.
+
+2005-04-30  Benoît Dejean  <TazForEver@dlfp.org>
+
 	* src/bacon-message-connection.c: Synced with libbacon.
 
 2005-04-27  Benoît Dejean  <TazForEver@dlfp.org>
